# laser_agent

./: .gitignore  gui_app.py  run.py  test_app_logic.py
agent_L1/: README.md  gui_app.py  pyproject.toml  requirements.txt  test_app_logic.py
agent_L1/backend/: llm_client.py  optimizer.py  recommender.py  vision.py
agent_L1/data/: TechData.db  TechData_Viewer.html
agent_L1/frontend/: app.js  style.css
backend/: cut_history.json  db.py  expert_db.json  main.py
data/: FastCutLDCInfo.db  FastCutLDCInfo_Viewer.html  TechData_Viewer.html
frontend/: app.js  index.html  style.css
simple_experiments/: .gitignore  archive_inspections.py  requirements.txt  run_gui.py  run_pyqt.py
simple_experiments/data/: experiment_log.csv  experiment_log.json
simple_experiments/scratch/: generate_demo_files.py
simple_experiments/src/: gui_db.py  gui_server.py  pyqt_app.py
simple_experiments/static/: app.js  index.html  style.css
正交实验/laser_cutting_orthogonal_demo/notebooks/: demo_analysis.ipynb
正交实验/laser_cutting_orthogonal_demo/src/: analyze_orthogonal.py  generate_pretest_plan.py  record_episode.py
正交实验demo/: README.md  requirements.txt
正交实验demo/configs/: bench_config.yaml  experiment_config.yaml  scoring_rule.yaml
正交实验demo/data/metadata/: pretest_plan.csv  quality_summary.csv
正交实验demo/notebooks/: demo_analysis.py
正交实验demo/outputs/reports/: agent_recommendation_LC_CS30_AIR_L9_0005.md
正交实验demo/src/: __init__.py  agent_recommendation.py  generate_orthogonal_plan.py  process_bench.py  run_process_bench.py  simulate_quality_result.py  utils.py
(+40 files in other folders)
